# example-application

./: west.yml
tests/runner/example/: CMakeLists.txt  testcase.yaml
